Add context to cinnamon-rolls and banana-muffin

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <a href="recipes/lemon-loaf.html">Lemon Loaf Recipe</a>
+    <img
+    src="baking.jpg" alt="Image of someone baking" width="500">
+    <p>Below are recipes to my favorite desserts. Each recipe is easy and simple for anyone who wants to make something sweet.</p>
+    <ul>
+        <li><a href="recipes/banana-muffin.html">Banana Muffins</a></li>
+        <li><a href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a></li>
+        <li><a href="recipes/lemon-loaf.html">Lemon Loaf</a></li>
+    </ul>    
+
 </body>
 </html>
