--- a/recipes/lemon-loaf.html
+++ b/recipes/lemon-loaf.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Lemon Loaf</title>
     </head>
 
     <body>
@@ -11,7 +11,7 @@
             <img
             src="../lemon-loaf.jpg" alt="Image of lemon loaf" width="400" height="300">
         <h3>Description</h3>
-            <p>Lemon loaf is a delectable treat to enjoy with your loved ones on a beautiful summer day. This lemon loaf has rich, spongy textures with flavors of lemon that pull through with each bite. There is a balance of sweetness and sourness from the lemon that is incorporated in this recipe.  </p>  
+            <p>Lemon loaf is a delectable treat to enjoy with your loved ones on a beautiful summer day. This lemon loaf has a rich, spongy texture with flavors of lemon that pull through with each bite.  </p>  
         <h3>Ingredients:</h3>
         <ul>
             <li>1 cup sugar</li>
