--- a/recipes/lemon-loaf.html
+++ b/recipes/lemon-loaf.html
@@ -10,6 +10,7 @@
         <h1>Lemon Loaf</h1>
             <img
             src="../lemon-loaf.jpg" alt="Image of lemon loaf" width="400" height="300">
+            <p><a href="../index.html">Return to Homepage</a></p>     
         <h3>Description</h3>
             <p>Lemon loaf is a delectable treat to enjoy with your loved ones on a beautiful summer day. This lemon loaf has a rich, spongy texture with flavors of lemon that pull through with each bite.  </p>  
         <h3>Ingredients:</h3>
